--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 </head>
 
 <body>
-    <h1>Welcome to the Full-Stack Bootcamp by CODED!</h1>
+    <h1>애 들 아 아 녕 🙋🏻‍♀️</h1>
     <h2>My name is</h2>
-    <h3>Fulan Al-Fulani</h3>
+    <h3>Fatimah AlSaleh</h3>
 
-    <p>I love CODED, and I'm willing to learn lots of cool stuff!</p>
+    <p>I love video games, and sleeping</p>
 
     <p>My goals out of this bootcamp are:</p>
     <ol>
-        <li>How to write good code</li>
-        <li>Get employed</li>
-        <li>Be able to freelance</li>
+        <li>How to write perfect code</li>
+        <li>creat a website</li>
+        <li>try to learn how to creaqt my own video game</li>
         <li>Do my own startup</li>
     </ol>
 
@@ -23,7 +23,7 @@
     <br />
     <button onclick="beGentle()">be gentle</button>
     <br />
-    <button onclick="sare5()">SHOUT!</button>
+    <button onclick="shout()">SHOUT!</button>
     <br />
     <button onclick="fetchRandomName()">Generate random Name</button>
 
